# KaZa-Server-Helios

./: CMakeLists.txt  KaZaHelios.qml  README.md  qmldir
example/: HeliosControls.qml  example.cpp  example.qml
src/: helios.cpp  helios.h  plugin.cpp  plugin.h
